V 0.2
- update dependencies
- fix BaseTest
- More info in Readme
- add cleaning script
- add apk binary